# aoc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
2015/day01_not_quite_lisp/: Cargo.toml
2015/day02_i_was_told_there_would_be_no_math/: Cargo.toml  README.md
2015/day03_perfectly_spherical_houses_in_a_vacuum/: Cargo.toml  README.md
2015/day04_the_ideal_stocking_stuffer/: Cargo.toml  README.md
2015/day05_doesnt_he_have_intern-elves_for_this/: Cargo.toml  README.md
2015/day06_probably_a_fire_hazard/: Cargo.toml  README.md
2015/day07_some_assembly_required/: Cargo.toml  README.md
2015/day08_matchsticks/: Cargo.toml  README.md
2015/day09_all_in_a_single_night/: Cargo.toml  README.md
2015/day10_elves_look_elves_say/: Cargo.toml  README.md
2015/day11_corporate_policy/: Cargo.toml  README.md
2015/day12_jsabacusframework_io/: Cargo.toml  README.md
2015/day13_knights_of_the_dinner_table/: Cargo.toml  README.md
2015/day14_reindeer_olympics/: Cargo.toml  README.md
2015/day15_science_for_hungry_people/: Cargo.toml  README.md
2015/day16_aunt_sue/: Cargo.toml  README.md
2015/day17_no_such_thing_as_too_much/: Cargo.toml  README.md
2015/day18_like_a_gif_for_your_yard/: Cargo.toml  README.md
2015/day19_medicine_for_rudolph/: Cargo.toml  README.md
2015/day20_infinite_elves_and_infinite_houses/: Cargo.toml  README.md
2015/day21_rpg_simulator_20xx/: Cargo.toml  README.md
2015/day22_wizard_simulator_20xx/: Cargo.toml  README.md
2022/: README.md
2022/day22_monkey_map/: input  (+2 more)
2023/: README.md
template/: Cargo.toml  cargo-generate.toml
(+134 files in other folders)
