[workspace]
members = ["2015/*", "2016/*", "2023/*"]
exclude = ["2022/*"]
resolver = "2"

[workspace.package]
rust-version = "1.87.0"

[workspace.dependencies]
log = "0.4.27"
env_logger = "0.11.8"
itertools = "0.14.0"
nom = "8.0.0"
rand = "0.9.1"
md5 = "0.7.0"
serde_json = "1.0.140"
generator = "0.8.5"
ndarray = "0.16.1"
regex = "1.11.1"
num = "0.4.3"
